[package]
name = "vibradb"
version = "0.0.1"
edition = "2021"

[dependencies]
sled = "0.34.7"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
lru = "0.7.8"
rand = "0.8.5"
env_logger = "0.9.3"
aes-gcm = "0.10"
aes = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
toml = "0.5.8"
rayon = "1.5"

[dev-dependencies]
tempfile = "3.3"
