[package]
name = "vibradb"
version = "0.0.1"
edition = "2021"
authors = ["Zander Lewis <zander@zanderlewis.dev>"]
description = "A simple, fast, and secure database."
license = "Apache-2.0"
repository = "https://github.com/zanderle/vibra"
readme = "README.md"

[dependencies]
sled = "0.34.7"
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
lru = "0.7.8"
rand = "0.8.5"
env_logger = "0.9.3"
aes-gcm = "0.10"
aes = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
toml = "0.5.8"
rayon = "1.5"

[dev-dependencies]
tempfile = "3.3"
